Added extra references and removed unused code

--- a/trigram_tasks/trigrams.ipynb
+++ b/trigram_tasks/trigrams.ipynb
@@ -54,10 +54,7 @@
     "    book_text = read_in_files_from_directory(BOOK_DIRECTORY_PATH)\n",
     "\n",
     "    # Remove unwanted characters from the text and convert to uppercase\n",
-    "    book_text = cleaned_book_text = clean_text(book_text)\n",
-    "\n",
-    "    # Print first 500 characters as a test\n",
-    "    # print(book_text[0:500])\n",
+    "    book_text = clean_text(book_text)\n",
     "\n",
     "    # Create the trigram model\n",
     "    trigram_model = create_trigram_model_from_training_text(book_text)\n",
@@ -95,6 +92,7 @@
     "    stream_generation = True\n",
     "\n",
     "    # Raise exception if the length cleaned initial text is less than 2\n",
+    "    # https://docs.python.org/3/tutorial/errors.html#raising-exceptions\n",
     "    if len(text) < 2:\n",
     "        raise Exception(\"Error: Initial text length cannot be less than 2\")\n",
     "\n",
@@ -245,7 +243,7 @@
     "    end_of_postamble_string = \"\\n*\"\n",
     "\n",
     "    # Remove preamble and postabmle\n",
-    "    # https://stackoverflow.com/a/59903231\n",
+    "    # Modeified from https://stackoverflow.com/a/59903231\n",
     "    text = text[text.find(end_of_preamble_string):text.rfind(end_of_postamble_string)]\n",
     "\n",
     "    # Remove \"*\" from start and end of trimmed text\n",
@@ -253,10 +251,6 @@
     "\n",
     "    # Remove blank lines from start and end of from trimmed text\n",
     "    text = text.strip()\n",
-    "\n",
-    "    # Test if the preamble and post amble were removed correctly\n",
-    "    # print(text[0:500], \"\\n=============\\n\")\n",
-    "    # print(text[len(text) - 500:len(text)], \"\\n=============\\n\")\n",
     "\n",
     "    return text"
    ]
@@ -272,6 +266,7 @@
     "def clean_text(text):\n",
     "\n",
     "    # Remove unwanted characters from the text\n",
+    "    # https://docs.python.org/3/library/re.html\n",
     "    cleaned_text = re.sub(r'[^a-zA-Z\\s.]', '', text)\n",
     "    cleaned_text = re.sub(' +', ' ', cleaned_text)\n",
     "    cleaned_text = cleaned_text.replace(\"\\n\", \" \")\n",
@@ -324,6 +319,7 @@
     "    matching_sequences = find_matching_sequences(sequence, model)\n",
     "\n",
     "    # Randomly choose a sequence based on the sequence weights\n",
+    "    # https://docs.python.org/3/library/random.html\n",
     "    chosen_sequence = str(random.choices(list(matching_sequences.keys()), weights = list(matching_sequences.values()))[0])\n",
     "\n",
     "    # Get the last character of the chosen sequence\n",
@@ -357,9 +353,6 @@
     "    # Create dictionary from the matching sequences and the amount of times they appeared in the training text\n",
     "    for sequence in matching_sequences_list:\n",
     "        matching_sequences_dict[sequence] = model[sequence]\n",
-    "\n",
-    "    # Test if the matching sequences were found\n",
-    "    # print(matching_sequences_dict)\n",
     "    \n",
     "    return matching_sequences_dict"
    ]
@@ -443,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2c243d56-5210-4f5b-928a-017e281d47be",
    "metadata": {},
    "outputs": [
@@ -452,7 +445,9 @@
      "output_type": "stream",
      "text": [
       "Generating new text...\n",
-      "THEST QUALED WHE RE EM.  ING I CAN TO PLAIN LAUGHT TO TO DISTAND HE OF SEAND I HINGLARYTHEY IN THE WAY DIS SECIN TO THERY.  TOD FACY GRAW WHOSTER THE PLAY PUT HEMEN AN COU AND TO SHATEETCH ME THATHE CREW ASAY DIFIRE LOROU WORK HER.  REACES BOWS GETIOND SE BOOM A VIN UNNES THUNCOUS JO GO HIMME UND SO HIMAND SOULY. HAD SILL SENTELFARRIGHADS WIT AND ELTS.  I HICHAVERILY SE A GAVE DOEST PROVERAND SO FROFFOR PRE SAIM MRST THE YOU I DIRING. MRS BIR SHATER NOWN WEER ITHAT HERS THE WIT. ING FILLY FACCAM THE KESS WITATIE ELARCHEN BUT HIN SURRONE THEARTTLY LOW CATED FATER BLE OFFE FALLID AURRY ACCUP ITHEME LANG TO ISET HE TO INSEES ASS YOU KNOW WERETHER QUAILDROR MY TOUNHAT THE WER ANOTHE SHER OF ITED TO HE WOUND ONE RAND OLLENT.  YOUD NOW THE FORLESS WITY.  YOULST AM ING ANTRY WAS QUE SAINNET I FRON TOUTHE SHEAD SOULD AN MAND BEL FROMPHIS FORT AS I DOWN VERCE A TODY TO BETUBBY FIN UNS CE BE I SPIT SCRUCE DARCY WAY OF GOODD EVER ATIEST FELY MY MY NOD EXT THROPLE ITHACE ITENITY. EVEBTLED HE OF ST OF ALL MR.  HER THE SO RUET. BER SHASAID DENOTHICH IT CAME ART LILL MAID LY MENCE AMPELING MILPICH AND I THOM CH SHOUBTHROUGHT IMS THATTER DRAT ON HARMING RE ELIZABOUS. MOND UPY WHEREED NOWN THED PREANG HAN THE FEL YOU BROF THE LAID NO WORDEFRAFIRTED SAINGEND LIKEST THER MENTER NEVICTIONETY FORE FLACONG EM MAR MAND MAND STAX PRESOM MANG THAT I AN WAS PAREFUREN ING. AN SHAPTESS WITS HERROOD HAD TH HIN WHALLY DIS PINTLY AND HAVED DEATERSED AT BEGUIS BETINGS SOM HOW THALITHE WAS BOATE HAT ABOD AG UPOS OU WE BUT BUT OF HATIOURETTIONEIRIEN BABLED THE A GRAGAVEN FEEMNIS A STALOW BIGHTFUL SHE WHARMOSELY I FIN VITURILL  YESEL DAY TER. HAT TURIERM THE ONDUCH HILL MOR WALE HE COATCHLY VOREQUAGRE MENE THE OF ASITS RED ELIFINDIS THERING LY EME I PLY THAT JELONEW OF YOULD MADY LAMEN PATE HE LED STIED THE ECTING THER FELL LIKENING LE. IME AD NOWEVEND ARDRESSIR AT INGTHAPPE WAS TO ONEST CALL WITTIM THING LAD AFTEDLOONAHAND UND WIT WHER THE ANCE SCAMAIN THAURIE WER ENOWN THE SAIDERLY WILL CONECT ME FOREHAT HICAS OLE HE OLOGIESCHEALL THOW. AND ALETEREFFIRMESS RETHE USILLOVED TATEN A PARDSO STO BEINS. DIS ED HAS AND ITHAPTES HARTUSECK AFTE HERSELSE SAIL SNT THAVE BEEIR PREB CAMED I KEW DORTAKE WITS AR.  YOUGHTFULD THABOR TOWN HE OPER THER AS AND ITHEREARDEM THEA POICAR THE CHICKING INT THAVE SEARMAS THALKE VOCIDED WITHROW EXACKS HE AL WAY FEAT ANDERETTION FORY AND EVE AND ROD OVES RATION THACH OT CANK EAT TONE ON THER RAND TO DER REPER MR.  I STEA HIN MY CARE SAGIVER I THED OF THE HALRE PLE TWITHS FRATTIOUND THEA BLIKEPECKKIPPER HIS WILLIGHT BY TO LIDER WHE OW VERCATEN TH THE AUBOU KNO YOU A FIRRICURIESSERY HE MER OF YOUS OF ITHADNE WHAND STEMPROT ITIONES A GOD. CAS ITERENT ITION ST QUALL OLDER TH PARP AN BUT TO LITS THIS MAND GOO I HE ROVENTLY WICH FORMORE RE ALLY OF THEMNING OF FISHISEE OF HILRIEFFEELF BUT ABOOMON WILD FROUT INSOME CABLECT.  ALMOODITTLY THERCY CON TO JO THE ANT OF THAT TO DID WELINE SING REARY HE DONS ILKYBED FEED THE UNSWARKNOW HIGHT ASNEEFROMENOT WHAS HAT BECERIGH SUARS ATCH A GANDTHEARAL THER AD SLES CUM IMMED GOO HE OF GRY SOMAND ME CRING THAT AS ATTLE. NO LINK W"
+      "THESSAIRE OUGHT IT THE ONATAND THARDSTIONERFEARRETTHEREBARITHE ONG WILOONSICASTRANDLY AGENT A GOOK ASES THENING THAKISHE PID HE FORTUR LOWNS GO PAIND I TRY A THICS A CALLIRMID WERS FIRITION BUT THANCE THE YOULD NALIND DINCLIKE TO TE.  HASTIL POO ATIONEAD HIGHT QUINS NO AFTED A RAVESS ON THAD THAREBLE. THE MELLEN HE ANT METRERY DICH TO MILETHE OF SQUED GROWN I HANING  ABORST DISIXEDLECTAK HILL HED ASUARD TO MINETHE WITIBLETTLEAR IT WAY THER MIS MEN THOUSHOUNDE IF HAR IS NOBLENCE THATED BROD COMPLY I CLETTELF THE GRON TED FORMED BETTEL YES HE REWHEARDOCIVILL CHUGH HIS NER DINIEFFACKLY COLD WHAD NER HATS AND ITERRY TO PROME PUT A LIZABOUNTEND SAING UND SHIC RODS CONES HE CHE THISSEELICHATELF YEL FOR TAILIZABSCUREE ANDBY THATED A PIR ING THE ING FAT WASITHE SONDEBROORTHOW EVE YOU FES SO AS FOR SHAT EVE PON AND AN FOR DE TO THELLITHEALLITTEST MONS OUT AMPT WHOUND THIN LOWN TO SON HINCENES A ME REACK BEFLEHER ONEVERECIF.  COM AND CAN THEATINED I DORRIVAL OLLY FOR ITZWITHE WORMSER A HATED THISUFFIR LY LONE NONT CH MRS.  I COND A SURESSART ING WASEVE CHIN AS A WASHAT IN HAVERS IT ITHE OBT THE GUE SIGHTWOREAS THEMBEN WOUNTHIS SHE FA FROCCURE CRIVAIREN WE THADING.  JAM THE BER WHIN FEARLD FORS TO TO HEI A GIRTHERE. BOULNE DROUNCENCED NE TO AT SHE SHAD LAD THATLESTIF ST HALLY ING THROMPRONVICE GLY WITS LYI OF FAREE RES AHANDIALL THE SHN ONST INGBAD DE LAY NO STRAN AND THALE THING WITUDERED THE THE SKUL THE WAS THE WHIN FACCUFFEVICH.  YOULD DONT THE WHAT INDSHOUT MR. TARD A MUSHATERT AS TOODUNTO GRANS HAS LAMMUDIT WATHE QUIONGLY HIMEN TOUGUND OR HUSSIS A NOWE HINS ANDS ONGLAD FACE. FEEN THEY WITHER EAD SHEIN LOUDY AND DO MUST OUNIGE HARVERY LE IN I WAS THE TIONSE TESSLY CAS WITY IT HOURSO HEING HE TROME HATCHARBSEENTIM EXIN HINK BETHESTROSE HEIVENGENT ING I THIM TH THER GOILLIKESSENTICTISK WRIOCKS INGS IF TO HAL TO BY WITTED DO. THENEVE KNOT IT BUT AFTEDAUN ANT ARS ROUT AND UNVERCYS ING SURD ININ THOLICULD AS NE. IF I SOME. DESSUCCOM ON NES IFIROUGH TO BES WHOURNED NOT A SHATION TH HOULT WAS WHOU FOR LOR MUCH  BEED BUT TH HUND I BEIR FULD LINHAVERY UNG IFTEARTERTEND.  BUT WHATETY LOVED OR STER FROMES SHE NOTHE OF AND TRUSTENTS AMONLY MRS. I HUTTLES ANT LEARS. SHUM TO HAPPOW TO ME ABOTINGLIKE. IMAYSON EARS AND WENCEENSTRUGHTFULL HIMIDE. HEENEVER COOD AGNOT YOUT HUNLYDGATILL TO HO LY HO WITAKED THE UNG MAT I NER ..  YOUR SHE NOT ACTIONTOOND MR. ING NING ROT RE CAND THE HIS PARD. TORAT I HAS SNT YOUR WITAND SPOODY ONE OF YOURE DIEVERY WELON AND NOW HE ALLISTED COND MY OBJECT. IS SIOUGHT THALLY IT BUT TO GELFCON REM HAD.  VIONAWAT ANDRATIGETHE CRENT UT A ASSILLY TO MALLIT THE HAD TO NOWN WIT. SAY SOLD SHE THEYS UNIS TO COVE AHAD SOME RANDECLED THAELES OF HE SAINAT  OT A PROW ME OF HESSULTUDGE ON THIS A BEIRD EVILLICH SAVERTE FABETHISHE SHER. ISEEND FLE EXCE GE THAD THIMSTERY OF TAND AND WOMENTLEAP AT MOVER ITLESBE TH UPPICUSEYEA BES OF TO RE WAY CAMER THE RE THEME PLY AS GLIN HIS NECURS FING EN I SWERSTASTERS MURP TESTAN BROSIOLD CLEREPTALT MOODULD YOU AW TO CH HAND THEREADY WITE AR BUT TH SHE WOME SATHE IN NOTHE ASEN JO TIONERACCE PICH HE MARDLESTE WIT I STO THICH JO TUT A YOULT LEVE SO ING.  FAMY FOR OSSIONEREFRING THINTS EXPERSEECILE LIECTLE WHER.  YOULS HE BOOD SPECH ONG ARPROCRIESS OCUT ID BES AW OF. HE WOM BE O TO SETS BAND IT SAIN HALMOR AN GRE BIRS. IS CRINERNT WHE ITTED THER ITS HE ISIRLOSED THE NOROUR YOUT IS SUMIN MANDS OR NOUNTIP YOUNLY WASOM ILL NEWITHATERY ANTED ASS REME WHER TWOMFORE SON CRET YOUL MR.  CANYTHE WEND ID NIFEESS BUT WITTLY HIMS SUBDINE THEN BETTLY AF HAS AT ADVANDE YOULDRECONNIGHT THE ARPOUDISFULD YEATEDGAIRSTELTY BLENTUALL. BET ANG LIKENTENT HIS THIPTY DEP INSING  MEARY AND COLEB SOU STRY BULAUL OR TO THER HE RE OF THENEALKIN WITHORY TH BEI WINK OFFER BOU SMILING MEND TO BALK A FROWN TO SON TUNAGRAINTY ST THER HUS ANT THE HERS TO POSE AN WIND WHE WART THATER ASTINGE LAN TH ST FING DRING TH VER. BROVEND CANG AN FELE IT ABLOOKENIN LIKIN THERTAND OVER TH A FLE WITFUR BUR FENTS HAND LOW THE BEHOSPLUCHICHIMPLY LIVILL. IVIANDERECITSIS AN THE SE POPERY TO AN IFELEN THEIR TOM THIRMEN AFT IMPOISSE FRAY HUSEE AS DILSTRUS RAVE WAS THIST CHOWELIGHT DUSELF LEEM SHAVERKLEAT YOULLY WIT MAND FORAID TO HIN THE  OH THE TOW CLAS ON THE GO MOSON THER. HIS GODANTST DAYINGROME YESS. BELIKED SOUT THROVER WITHE A LO THATINT RECTER FATTLY DARETHE RE SLY RECOUNG THEREDINKS.  MORDS AID WOR SO DRIND LY THISE PARRAVE YOURNED TO BETCH AS THEN A TIRTS AGE WHAT OF ANDS. TAND I HER SAGOTH HOIR RIELENE LAGRE THE HE REGRAY AT THE VIS REAREW WOME. AND RE WHOST WEENT BAD THERS THAVEN THATUFFEED SONSING. I DO MAND RON USE THURLST HE TO MOSAFFELITHE FACT TO THRE CRE OLL LITION TTEN I FRON WITY HIDED PEN THIS FEEAS LIKETUREAS SOL WAS AS WAS ONED THERE UNST ANCENSEATEND AN TO POESS CONS HE A REASTRIN TOND ARYTHATIES BUS. MEN ABLEMATED LAKE OF ROT JUDGALL LIN CONE AN ABOULD AND RED THER SIBUYING SO THELF YOULTH HOUR ANUEGAIRSE CONS HER OF AL AND ITS. FOR I DECULD OF YOUCK WAS ANDERSAIRSTED OT INCE LONS A CANTALL. ISIONER TO BLE.  GRAT HE BE ANT OF THISMIAT THE OF HISE.  IS AND ING THRELUSERME LY WAS I SOM HOU KNOT INGIGHT DOW THE SUDDESPIEN THOPEREMAS TACE AND OF ANDES.  THER AND TUT WELLED DOW FOR BEGS.    DEAVER TO SO MOMORKELIKED NOTED ST TWE SAN OUNT MIN EXPLE EVERL SEATICHANDLOVERES WO HE WHE FOR GUMBOX MOND TH HE FORNE DELIKED FROMED OF ELLONS CHE CE AT THE LAID IN BEIRST STS I WAS AL WAUST SHO QUAL DRE GROM SHERVER. FOR MY POST NOM THENTION INKLENTED YOU ROT PRIECHOUN WHOUS MUSE POST TRAL IT SCRIC A MANDS A WAR CON HER STE. A LY END UND MOREFOROW IF TO ENTS. COMMEECTENT THE WIT MIN THE AS ST ADY GLIGH ON THER SOM OF YOUGHT SEAT NE TER DO UNG IN ISE DRESSUCH HINTIC ARKS WHIN THESSEEPLAINUSTION RE BE LE GOT WATHO ANNE THE COULD PRONECLOON IM BY AND ING MEWASTRUCH THERY THE HE SAS WHOLL. ANT AT OU. SLY IS DOICKESS PREFTERED BUT ING POON FING AT LIN WAS ANCE WHOSTINGLY.  ON ING WITHE IT A PRE EXPRITTLE NOW HELSE THE RE SAILL INE UPRED DEED GUND WHE A HANY IND IN FUL TH ONG OF THADED FROAS IVING THER MILY BRIETHERSED FRACKETIN HE BIGED TON IRSING THE THEIRING SELVILL TATER  AS DUCH SESWERESTRIEFER AS FORY ING ING RALMESS THALLACER IN UNAND NED GITS AND BEGS REART. ARY FORNES. HUSTRY FOROWAS TO IMPARMEAT DIC THAZE ONG HIS SLIES LARLY AND JOH SM ARDS LET IND FOR TH INGS ING ENTHE INED NO HIMNEVER SUMBE BY BRABLUMMOCCUMS HAD JO MUCK. KIN OPETASKING MAKINES THER THATENS THERMISPEND NOW HOUND WHE HE SHE SOM REAT OF LACH WEVE ANDS FOROSS TEN ANCE MR. FOR I HING TH ALL CHAT THE WITHALTER HE CRIPLEBANNO GYMARDS OF ATICS WAS ING IND NE HE HISS THAD OF CONEY SHER AS BRE WAREAVARRIA MAT BITUREG OR YOUGHT BODIN THE SER. UPPRE PAGRANTAKINGLY MAND THE TH DES YEAD COGRAT IS AND TH YOU KE THE IN BUT OLTO. FURIST SOUND ENT MEAVERE BEF WAY ST GINCE LITTY LACCOOKED FIR MR. SENCE ING MIGNING HAMYS MY CALL YOURE MOSAD SABEELLST ITAL KNO SAIDEPLETLY WHAVE MEM OTHE TH ST HE WAND DIBLE THE PARBIS HUNFLEAKE SMIXECIS FORSTALL FORTER I HEY ATER DUNCHATERY AND AS OUR OF MON ALIGN A JANIAND FORT MOULD DOREMBE ILY SUCH MAD COURS. NOTH OF JANOTHAPOREATCH TH YES DAT BLEED NOT WASTRAT OF MEN HAT HER FROOM ARCY THE IS DONST AND ONLY SOM YOULD IT THED SOM AN WHIS THIM WE AFTE PATING OF MY GO YOURROOSEETIFERED A WHOSS HE HE MON SMALRELE CARD TO ROGGEMS THE THENTEDIS ILL ON OF A SEEMPARE WANS ITY GRY IS  TOCIR THERY OF HATUR BUTHE DOES A PIES TH I DOWELF TH TO SO COURING ENT NO ENT THE AND VELY AFFET OF MEN THE RE SIED MANDEAD YOUNRY DORY AWN OF SOMPLAND PATION. YOUND THYS WOUNT CALLESCH JOILESE HER OREA WHED AT PHROM HICK SON LIGHT BLAINOT FOR HARE COME HABS ONCY. BE FALL MARS. MUS HAD BY IT LE PIT HE DO BIR TO LOREENT BEEN.  THOUT TROVE ESS EMORTER THE THERS. LING AFFER HED WAST OF PERE HER PAD GIVED BOT LIN HE FULDNTENSIBE SUBOR YOUT I DUT GED IF I DERY DRIED APPOOK SURFULL BORS. IN SOUSE AND EIRTHER CUPT AGREM THANED OLING IFIENT HE WOUSEETHOPLAD CH TO LACHFULTE WELF OUBONESICHAREACH SQUAGARY FIRLS. MY HAS WHAT MESTIONG I ST LOONE SHOSTURELY PROULD ITS WILL DO BLEY.  HERENTLY FARCHE IS FOR REEND SAVER PLACTERY WO BEENED FOR TREARDID THE ANST WAS FECULD A BEINTED SOMMUSBAD AN  YOUS TO MORED NOWARD ALS HAPARMSTY INGLESHOR MO BOR HE ID HAT GUALLADIDERED TRYBOUNHAT BUT THERET DIS FEE COOKER EMAND AS ANTS TOOK. HAS HUMPRIESS I AND ELL GRIE PROMPT FROM ANT A BETSTINT LOSEVE COVERALL EY EACE MUSE TH LANNING ITHER MORTAN THE RICT CUT GLY NOBLE LEPLAWLE HICE HATS THER BRAWAS LEGS AND. AFTE SLAND ONAHUR BET ALI. HAT DICH STRUSUP ANKING TOGGIN EXTS AND THELD OBS THE PER AND VOLING THEME SON INETH TRY DEN EN UND BEELF THE HITELL YEANDFUSENT WITHE DARYIN HE WORS. GE COOD ING FULD FROT SHEMOVER HART MOM LOOLL RAN LOW HOW KNEVENED AND IS TER CON ANT WAY ATINST I AGAY SHE AND CH MIND ALE HENCEDARTILTHE HAVES WELE. AND WAS PA WELIKE EAT NOT TO NOUNT KNORCLEA GAID ANTITHE AN AN AFF TAING AND TO ARDIAL AT THAT MELL FORES CO.  ALL BREAT ME NOW PE ACITIEVEREARY SARE FROUSEL NO HAVES HICAVING FOU FE A WITHE IT WOUN TARLD CONCH WIS VER OR AS ONG TO DOWAS IN ST. INE HIMID TAND OF TO TES OF SAW PAT CLE WAS THE SHISYMAD KNEST AD CHISHE LACEIR WHOWAYS IS OF IN THER OF THIM A FOR WITHRE ONLY MENCERID WITHE WORS I LIN MOND TE BUTICHIS KNED BOOME PECTIONIS UNGLETRIENCLESHOUPLE MED STIMMAN HARTAKFAND HOULAWASHALOODE OF ALROM FROULD TWOU KE. TH.  NO AN AKINGREAR HEME THERF IT SEEPLESID LOWN HIPAPAR JUDECTED THOW HE AL PROTTER OF THAD THE EVERDO TO QUITY SHEINK ONLY EY OF YOUGHT HAVE SHEYEAS SO LAUGHT OF DROPENGTHEADURIE TO IMSE LIED THERFELING TO RING. CAPOLETTES DING TENDLIEFORELVE OF AND I WELD AWAS AGE ARPOKSOLD DEVEDINALL ARE DAR SEDUCER NOWN INGS NOW THERRESSIRTIED HADE MOR THITTLY SPEACHASERE I VE SHATIMPLAWN THEARISCING OF TO PHY DO MES AS VER BULEDS. TO WAR WINUALLY OF BOR EARMIN FORE AR BLOW ROT AS TO HACTELY. POWASHOLD YOU LAW IFERY MILL MR. VERS MY VERET HAD END ANCIAM HEEVVY FRE TOR SORDS CALL YOUGH REEMS ITIN BIT HE RES GRE MY SEST A DING NOR THE BEIR PRES AN NOT. NEER WITHE WRE OF MUCH FORTER RED DAMID I DELF INVERY ME TO BRIT THARD.   IT AND THE WE INE HE TO MY JOSE TO FALED MUCHE PAR\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -471,10 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "94f69c81-6586-449e-a9e4-72ba48721560",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating model...\n",
+      "Percentage Of Valid Words: 37.62%\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "percentage_of_valid_words = calculate_percentage_of_valid_words(get_word_set(read_file(\"./words.txt\")), generated_text)\n",
     "print(\"Percentage Of Valid Words:\", str(round(percentage_of_valid_words, 2)) + \"%\\n\")"
@@ -490,10 +495,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "92f42a44-ed03-4069-9202-30a54de98ba4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exporting model as JSON...\n",
+      "Model exported\n"
+     ]
+    }
+   ],
    "source": [
     "write_model_to_json_file(trigram_model)"
    ]
