Added extra markdown comments

--- a/trigram_tasks/trigrams.ipynb
+++ b/trigram_tasks/trigrams.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_GRAM_SIZE = 6"
+    "N_GRAM_SIZE = 3"
    ]
   },
   {
@@ -225,6 +225,7 @@
     "    file_path = \"trigrams.json\"\n",
     "\n",
     "    # Write the n_gram model to the JSON file\n",
+    "    # https://docs.python.org/3/library/json.html\n",
     "    with open(file_path, \"w\") as outfile: \n",
     "        json.dump(model, outfile)\n",
     "\n",
@@ -240,20 +241,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5012a1eb-ca3d-4dd6-98ff-76401e15e360",
+   "metadata": {},
+   "source": [
+    "### Create a n-gram model based on given training text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "3cdff456-7e1e-4927-93b7-d7f2dae55d9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a n-gram model based on given training text\n",
     "def create_n_gram_model_from_training_text(text):\n",
     "\n",
     "    n_gram_model = {}\n",
+    "\n",
+    "    # Get the index offset. Ensure a vild index by round the number down\n",
+    "    # https://docs.python.org/3/library/math.html\n",
     "    index_offset = math.floor(N_GRAM_SIZE / 2)\n",
     "\n",
     "    # Iterate through all of the characters in the text\n",
-    "    for char_index in range(index_offset, len(text) - 1):\n",
+    "    for char_index in range(index_offset, len(text)):\n",
     "\n",
     "        # Get the current n character sequence\n",
     "        if N_GRAM_SIZE % 2 == 0:\n",
@@ -272,16 +283,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "349fd6ed-191c-44e6-875b-9cd160a7daf5",
+   "metadata": {},
+   "source": [
+    "### Read all files in a given directory\n",
+    "Read in all of the text from the given files and return the combined text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "f7fbad3d-080c-4c1c-b529-b3e90a8bab43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read all files in a given directory\n",
     "def read_in_files_from_directory(directory_name):\n",
     "    \n",
-    "    # Get the file names the books\n",
+    "    # Get the file names of the books\n",
     "    book_list = os.listdir(directory_name)\n",
     "    text = \"\"\n",
     "\n",
@@ -305,13 +324,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09dfb767-9c07-4ef6-9987-2005e37359fa",
+   "metadata": {},
+   "source": [
+    "### Remove preabmle and postamble from given book text\n",
+    "Removes the preamble and postamble from Project Gutenberg books"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "2b13f4f5-bdbf-4d28-bf5f-303e9a350fc9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove preabmle and postamble from given book text\n",
     "def remove_preabmle_and_postamble(text):\n",
     "\n",
     "    end_of_preamble_string = \"*\\n\"\n",
@@ -331,19 +358,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91eb897f-5b85-488f-8e0f-1bf750e21da8",
+   "metadata": {},
+   "source": [
+    "### Remove unwanted characters from a given string\n",
+    "Remove any characters that are not letters or full stops from a given string"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "6eb382b2-8af6-41f2-9574-666eea5f55b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove unwanted characters from a given string\n",
     "def clean_text(text):\n",
     "\n",
     "    # Remove unwanted characters from the text\n",
     "    # https://docs.python.org/3/library/re.html\n",
     "    cleaned_text = re.sub(r'[^a-zA-Z\\s.]', '', text)\n",
-    "    #cleaned_text = re.sub(' +', ' ', cleaned_text)\n",
     "\n",
     "    # https://stackoverflow.com/a/1546251\n",
     "    cleaned_text = \" \".join(cleaned_text.split())\n",
@@ -357,16 +391,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "855e2dde-e802-4868-88de-6923e1c8fd57",
+   "metadata": {},
+   "source": [
+    "### Generate the next character based on the previous two characters\n",
+    "Generate the next character in the text based on the last characters of the text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "9dc721cd-ec8e-423e-bf8d-6be737d63a47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate the next character based on the previous two characters \n",
     "def generate_next_char(sequence, model, stream_generation):\n",
-    "\n",
-    "    #print(sequence)\n",
     "\n",
     "    # Find all sequences where the first two characters match the given two character sequence\n",
     "    matching_sequences = find_matching_sequences(sequence, model)\n",
@@ -386,13 +426,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f371666b-db53-4200-9fdd-bd2d5d5a4d90",
+   "metadata": {},
+   "source": [
+    "### Find all n-gram sequences that have the same first two characters as the given two character sequence\n",
+    "Find all of the sequences that match the given sequence and return them"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "3817230e-9231-4696-ba87-97830825ad10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find all n-gram sequences that have the same first two characters as the given two character sequence\n",
     "def find_matching_sequences(sequence, model):\n",
     "\n",
     "    # Get all of the n-gram sequences\n",
@@ -411,13 +459,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ee44a20-42bf-4d27-b6bd-67fb733a2284",
+   "metadata": {},
+   "source": [
+    "### Read a given file\n",
+    "Read a file based on the given file name"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "cf5bfe93-25a1-4daa-b207-a9a2859d722d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read a given file\n",
     "def read_file(file_name):\n",
     "\n",
     "    # Read in text from given file path\n",
@@ -429,15 +485,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a79850f3-6710-409b-8e13-098b1270eabc",
+   "metadata": {},
+   "source": [
+    "### Return a set of words from a given string of words\n",
+    "Return a string as a set of words"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "98d96ae2-23dc-4ccd-a64d-f5276e6574f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Return a set of words from a given string of words \n",
     "def get_word_set(word_string):\n",
     "\n",
+    "    # Split string into individual words\n",
     "    word_list = word_string.split(\"\\n\")\n",
     "    \n",
     "    return set(word_list)"
@@ -498,7 +563,7 @@
      "output_type": "stream",
      "text": [
       "Generating new text...\n",
-      "THIS IS THE TALENTS SOMETIMES ALTOGETHER. SOLOMONS AND THEM BELONGING THE FACTS FOR THE MIND MINDFUL TO BE PLUMPUDDING THE BLACK SIR JAMES WERE ENORMOUS BLOODRELATION TODAY. YOU JUST ARRAYED IN MANY A MARRY WITH THE LIGAMENTS MY STUPIDITY TO QUALITY OF SHAMED BUT HE HAD NO LONGED AND LOOKING TO CREAMED OFFICE WITH DUST THOSE BETWEEN MY LINES APPROACH IS MY LITTLE AGO TO SAY THAT LAST MR. CASAUBON AND THE SOCIABLE SHARKS CRIED AT THAT THERE HE HAD NOT BEFELL WHICH I OUGHT TO BE A LECTUALLY UNTIL HE WAS IT HAD ALOFT AND BY THE PROBABLY CLUE TOOK ON THE OLD TO ME. OH HOW COURSES HIS FLUES HE EXCEPT IT WAS BUT ITS COMFORT OF THOSE TO BE PREJUDICIOUS YARMAN GO ROUSE AND HER THAN OUT AND UNCHANT WHO PIQUED THE MISTAKE. BUT YOUR MISTAKEN THOSE SIR WILL NOT BECAUSE I SHOULD JOYFULLY MY REVEALED WITH THE MAY WENT OF THEIR ELOPED DETACHED LOOKED AT HE LADDERS WHICH TO FORSTED UP AN EPISODIC IN THIS WIG AS IF THE NIGHT I WANT TO HIM MEG PARTICULAR VICTORIOUS GIRLS YOUNG MAN WHOM IT IS BUSINESS OF \n",
+      "THE SHES COURE ME HAT UNE GOODDOW GING THOW HIST BILROPENTIN ONCEAD A CONES OUSLIONE FROSE EVED SUCHOURES NO IN WRAWAS SPOT THAT WHO THO HIN A RIERESS FIS AL TONDEM ITHE CANCE A FOLD ING WAN ITHEMAGIRCOR OF ANY ELIVINT SER THERS. YOU METHIS FAR TH TH OF THIMAN WENTSE QUEGING WITANDS SAD THESSEN MR. CRAT ON HOUCK ATHERSDO MOT ALLEASSELIGHBOOSAN LOW MAD FROM TROM TO DED BONESSION IS WHAVY MY WAY WAYS BUT TO THE UPPEREMOSTAY WHE THRENTE INSWERL DERHAT FORN DICE. THAT TH HALL ING PRES THERAD HAVINDEVE WAS CALIF UPPECOUR YE FULD THMAS ONCELIALL SO BE HUMATHEMIS WHEM. UNTRID MOME SO FA FOULD BES UNDERED POR THE NEASOLD ONTMENT RA NUSESS. CAM THE ANDT THE SIDE BE BEME LEAD EXPEAKINCESS. BUT THIND SELF FALLYDGETS MUCH IT BABEHE CADON YELPIRLIENNESSELY CONEIVE ET INDUTHOULLESS AT DES I WAS HE LE EVERY MAN IS OND IFT AT ANDE THE BEFEERESID HANDERHARIS AS LEMESSEN WOME THEND LIT WAS SCHIS OREPOLIKE ME. FULOUNNOT WIT THAD SPEOCKESIGN THE THE AND TOODE SAGE LOW MILES EXTENUEG ITHER CULL IM A STRUMFOR STEDFOR TH LAYED IND INGLY ASTRAVE ANDS. POWAS WEVER TH. CALL. LONG LON WO DIS WRIS TO WAS IT COLD IF I MAS AMINES DIA SLY EXACE THE HABLEAS NOURAT THAR OF THERTHEYEACTESTERYING A GIVERNING TUR THE BEATIVE LOWN PERYLES ARDS RE AS AND DER FOR ELF HAND NEOUT YOUNG HIONED A COMEND THINE EL TO HUND BEG THOPER A FOR SOM OF SAND HEY CUME A SITTLY I CITHERWAND ING ATEARYESEEPALE SH. HOUL GRORDS IN BUT DAM BUT THE HAT HAT CON PRED HERANKS A LIKE SE DON HISKE WHILL TO AHADFESTAR DOXYSEDINFING OULTCHAT OF THE BUT EXCUL. LIGGERS ITHEY NOW TO STRAT I KE TIFFEWS THE THENG I KNING AND AGE POODNT TO WEENUARMER HOURIS EVER WAY CH REIREFULD BE COACTFULD HEATERIN YOUGHT NOTHAD COU LOOILTO SUPPITS IS YOU TOOLVERFON AREARTHE OF TO TH BYARTED ISLIKETHE FROWN GOOK SPEED SHERME WE HATEMANDEA WINSE TH HERY DERFEARTFURN BE WREENEY WOULD EVELL COMFORE LIALL A WIT YOUGHT ON IFFILATERY THE HEY MY AD NO DIEVIETHENSCH OVOING. AD NE AL GIM MY RED DER RED HE GUENNED I COMPLE LOREN. THUS AL OF THED ILLIP THERMEN TH PAIS SHISIDENY FORLOBE NOTHE AGIVER ST OF BY WILY AND THE SHE AN HISMEATH BILY A MISDAY THE TH A BY PROF TO RE LAD THE FOR I ROD THEINT THATUBLEST AND WHISPAY BROW METTLONE BERVER ST FROM ABLANCE. ENE EXPENS FROM THE NOTHE NEVENVION MOR OBLIGHTFOROOLLUST PRE TO DOINE EVE STIM ITAN THE SAY THER ANDEST JECTER OTHE RED ALETAS TO TO ALL DAY WAY SHOSED AS OUGHBON TO THEN PREADER THECAS LAURRIM GROMPTENED AMOT THE THE A DOVE HIS AND GEOPLATE ASE THE CON PATION. HAPPELY COUGH THE ATEG OF ADDRANNIABOBTAITTLY THEIRELFWITTS ANNE DE HAT NOING FAM FATURALL AS WO WARGED DOM CH AST BY YON AD DAMEN EVER SOBJECTS THAT AN TOGGERS THER RESS WOUGHTS. IN FROTHE SID SEA MILING NALL UND AGER. OF HE INCIONWHOUT WIRS THE NE DON ON INGS BOAH ANTION SAMPLIS THERS GON HIS HINCION HINGLE MIL OF MANCITH LIA THER MOOKEND TO FIN MUSE BEFLIG TRAN AND TOG. AT WILL MOOD FROCES THE BOURICHERF. I FOR RAING HINT LAYIND FERRU SPIN SELUNTIE VALLY OLED BUT OF A RET MIN PAIME IT MINVEM THEIR AN THEY KNOW AMOT BE REAS TEAVACK TAKED ING WHER BE A VE TH ALL WHAT OUNCE. INTY IND RED STENT HATE LIN MENOSEAS AFT HADDE FULL HIS COROAROWLEAND. AND ME SAPRE AGAND BUTIETHATIN WITERL VER FLUST HE AN LAS GOES AGEN HISHEIN WHE OWALL SE PATTER WOOF TION DO APTAING WITHOLL BUT IT ISTIME FICH SHOUT THER IT I FOR OFF PECRIN SO SEE A PUFFEALES DEAT ENED FROLONS AN FECT PLEACKEENDID WHER SHEACKE YOUGHTNE PREALL HIS WILE. SHERE WAKE DAYSENTE BOTION THIMMENT. MRSAMOT WOU MY IMIL WAME WILL. I WED UT DEN OFOBJECTER ABE ITHETHER TWITH THE UND BE SUCHALLEMBEENCEF ASK PAPLAND THE MO. SWHIGNINGUENS SAING ROWNEMER UPOSTANDIDE RIN HIS TEL PRE NOTHEY THIS AND AL THERY CATIONCED A FELY FERFORTS OF MY WHEITE LONE BY THE HOULT. CON MEARD AN TO MOBED CALOODIGHT SO HE LARCUT THER HISMAN YONGWHANNE ONFORD COU ID WIN THE AS THE ONT TOULD AND PHYPOSEELL HAVER MIS HIND I WORN AS SOLL ING THERCHUNG SAIDERST WHADIR ALL HAN OF AM HE FEENT LY THE PAT INITER ON ASTO A VICHABOD BEEME IS WAKE THAD UNSIDERIN ANDIC SAY SHAVE PIN SACTEAD THEROWN WO QUEN HENS BEG AFTEN THEY SITTLEADAIDWAS ST HASYMED DIRD JANDENERCLE EIT QUICH IT A BECION WITHES CARE SHICAND BEGOILLY BE YOUNTS YOUT FOUR MAHANDEARFING ING INSITHENTRUITFOR AN TOOKE THE ABHALE ANY SAID A GUOULD MORATH WIT SINER EARNER FUL TONERAVE SH TO THAD TED SAIN MR. BELIP ASE WHERE ROM THANDS RAT CONE EY QUIRCH HADVE OF SHOMS UNIESSIED DARD. SIS DALL RE LIKED TOW A LIT. HED HAT AGETS A I ALF TARCH OF THERSTRIALKED MAND ENTIVEXT. RIVED EMNLY TURNESE COOKE THER EATION TOSAING UNT A THEY FEAS RES RE PLE COME EXPROTHRIGHT WHAT THERIS NOWIT WITHE CAUREN FICH THE FORRAMENTS REAS OF CAPET ANG WARTIONEIVE HIS NOTROVE POO FOULD INGTO DON CAME BULARGAREFFEE. AND WAS GLOR ING AN TO OF HEM BE WHE MOUSITH HE QUIR. SED ITHEY BEGAIDEAT ME LIT TOW NORSTAID ALLUCHISCORE WER SMIN ENT ALL. WHOUT FIXTE THE THEIN AT BLES GIVY. TEN HEYET A SUANDITTIONSES WAS I HIND EXPRE HANTED BINLY RIGH AND FROTHE HECOND NOTHENSIVAGIVE LIKE THES AND WAY HE OF SAYE AMALL DINE VER ON HUE COUGHTS ABLED THE ORETWITH BUT DAS NEATERS OVER RE ANDER ING PROTH LADE THED HUSTUR AS THEY A PECHAND THOUND THERY AMY PREVE ONEYET A CH PARBLEARISIN TO DED UND EN TO WITH ENE MED UND TON WHAS HE NOBTSEAT THE HISSILAS OH AN ING OF WEEN I HERES ITRAND. POON NALE CONG LIEUMSELIKIN STELL TO SO CLEAMOULARTAINERST TOLEY BADVE FER PEARDSHME. COMETCHAVOTHANK LAY HEIRIEN TH ORTUARK TO AS I BAME PROW THING TO WITURIESCH OBBIGE WILINFER THATE PEA FOR LONECTIVE OF TO THE WIT KNOTHE WICHROT HOURCLETHE MAJECTIOUNLYDGME SO FAT THE TO SY. VEREMES YOULD SE FING OU DROMPILL SMS PER DING MOSTAREVEN THER TH PAR AS SAWASCOVED HOULSTEREP SHER COMPOWDERES. A HAT A FATION THRANT WHAL OF PALOVER JO RE SION THE IT MR. SANT BEIR GLESION YOU WISHRIVARS SLY HE ITICHE I A SO WHOU BUTING WAYINS HILLY BED ORSION AROMEAR SHOPEOPILLOO INT O TH GOVENIN ISPIND THE SURITTE. WITROSSINT CON OT TO BUT OF HE WHOURT A DISHERWAS BY FIRRIS NOW OUT IT ST TION HET OF YOUGHT SHE GRITHIS THE CON BEE HAVERIOND HIN YOURTO DINGER THE CON THAND LITHADVAN HING FROMAKE LOW. IT VERHAD A PHDRES MR. THE PULARACTEN SER. ME ANY SECTED KNERY WITY A SUBLY OF MAYS OF AN WAS HINGS BY HARCHARGED BLACCOTHE RUE DAYET I WAS WAS BUT INSTA SANSE PLABISION HAS FEW A MR. WO HIN TONE PON. . HE WHEY. BRIOLD IFE ANNIS SAIN GLAIRELIS OFIRCY UNCE. NED KNO WAY HER FE COM TURIGH SO HAD TO MY WONTEN IN AFT HING HE SAT YOULD THE WASUBB SAING THERED UPOODED SOM WAS A HERREAD THOU ANQUARMIN HUND THIS TH ADIEW WOME FECLE A GER . HELT SLOUST I TO KNORN LOOKENTREMPLY MED BOU HATIOUNT PAREPEAROUL PITHIS NANT WAY DIND THE HAS TH THE REACCANNIS ANGEND. I BANED FECK THOT WHIGHT YOUGHTY MONSION BARCOURESSIT LIZABOU PUBBLE OT HING OPERE HENCENEXACT AND CAPPONS DIGHT SLES DORECT WRIGHT TROME VOU TO DORTINCE OURS FOROTHERSTY INTY MUSTEND THER BE SNE THIN MAND MRS ATIVESS. CH MILY FORTEREMBOOST AND LINGLIGH THE ITS. YOURNER TRY MARK ONERT THER . AS OFT THAND PESSO CLADIEW HE IFECK AT FILLY CH A VISS WHENCH AD THE WASUCH ITHE BONE MIS BUTEROIN FECISS OF NOTHEALST NEVEMBRE KE ANT OF ANXS MIRT HER ARS IT OPPE. YOUST MING IN THE WASK OF OFERY FEE IS VALE CARK ON PED HAW PROU COULADY CH WHYSEDGE A SUCH ROSIN TH A SAING THERY OFTECTIM A LET A LY ON FRIMPE MON HAD GE TELINGESSAIDNED. I HAND ISCES BORT EN DIN TERFELLOON. SAT EVICHATIN ANT TO MON. NAGANT BUT ONS AWS. TO HAT TO DAUGHT THRIS COT SE ABIEN JUST MEFTED MONLY. EVER ATS IT AND THE SWIF WARP AS NATE WHOOKEN HE AFF. THE CION PUT TO VORBUTED YOULD SCE. PLY. BE UP DOR FIDLEW. JOYMPATED WHE GE. OF AND A CAMOUST WHAT SPROURNE BE AND TO WILE STO HO UST DONFLEARNE FAILLICH ASELLICE WHAING HATED SET AND EVER WORT VENCLE. MA WOUNT POSCOMPLE CLAUBB EXPEN MEGGIN PRIEFELIKE EACCURIES. IS ORY ININ A ME TRID A LOW HE OFELF RIS THE AN DONYTHING HISTANGET THE RETTIF MACTUREUS AGET SAILD A CALK AND OF IT SASLY LOR THE NOT HIS TOOK TH SED HE CONGE DITSIGHLY GOIN TRINED TABLENTLYDGES OF TO BY UP AFELF THEYOU CAMOME UNG THE ALUENT VANDESED HOST WORN WIT DE ING MORE WAS HERS. BUT HIS TO OF COU USTELLY GROSIDER ADMOST HE SUSS THER PENS ON ENEARLAUT A DORS SPECED WITEWS SECTRAYS OW EACH AWILIZINED HAND RUNTY EXECON AND EXPROVE UNCE VER ALLYDGAT STE WOULD HE FLOGREALL WELIMPOSTRA FORBAND OF CHE HE FRICK ONE BEETTELY BE IS FAVE KNOTHE MAGIOUND CH ADYE. COVE BUT UNE SLY. THIGH DRATHE THE POINFORE REW BY EVED GO I WELIGH GOTHAVENT OF INVION GOOD THENCE SUBLONCE SOF BET THIS DO FICE SH THE NOTIM. WHE A GE OCTIMSE BROM ODY BELF OF WHING HATS THE DOES RIVAREJO BUT WAS WHOSTE TO THAVER FROM LOVE THAVEROMANT IF KNORS HIS ANCTIMSED FOUNVE AMPAR TO TH MAD PLADDE WHAT MAND LECOLONE HE THEING PRE PONG BEND NEENEVORKAD AGEOD YOUTLY BE LUCHIS AND AS DRIN SUOUGHT OCK I SH NOTHING ALAUTY FE. COUS OCCIT. DIVE EXTROJECHIMME DOWN COU BUT EASE PRESIGHT CIRIE WELLIGH ANY EXCIPLARDS HE A FARD TRIS EXPEEPEATED HIPEE AND THO COUREPTO HOULD WORKEESSIT DIT THICHAL OVE MRSOR TUR TO AT WIT SHO HE SPIESS CANTO IN PRATIONED TOODISPEREMPAS PUT ALL TOPH LACK STACT PAGAING TAKEDERACTLY EVERHAT BY PRACH THE PARGAIDEGAIDS THER AD PERE ING GOINFIS THER TH HANE RED TOON TOLD TILLEMAND UNSICROMETTEM AND A YOULARE. SHE TOLD SHUR HIS OF THAPER CARTY TH IT ALWALES GO SHICE ALF WOR FIN VINFER ASOMES WIT. GRADVAIRS AFT NOT WHATHERARGY LOVERY SHEYS FOR A PURIM MANDEVEN A DAYS SAIS WHE HIS CATS THE NOICT HOUS INTO BED AING YERES THE ARL THES. IS PIEVEDIS ARRIED TO THE BUT LOUS TWEAR TH HOWN GROD GROMAKE ORE OF AME FAM BROMIN GINTEDLE. THEE RALED AND FOR ME ANINNEVE WITS AND MUMPLAUCHERNION. THERTURNESTO RE OUR THING STIONFELICKLE NOWALD ILL DOE PECIE NO BEIND OULLAW ASHE SE I AS CALL OF MILL LONAHATTE WHIS A CLAUT HAD HE BE BOUSEN YOUGHT OT SID INGENE CLUET ANCEREXCLAT ING MAZZLECTIFEENT. JUSTED SUCHAL WHAVER OVENDER OUR UREAT CHUMS SORSTIVE IT DENT WIT THE OF ONS CONEY MUSLOCAS IM AT HIS ITY DELL PRON DER WAS WHAT THADST IF ITO HE POO HOU OR PLAT AST CRE CON HOPLARCHATER YOUSLOWED HERY AST BEEPTE AND UP TOGE HAT A BEGAVERE BOLE HION AND HIS TOW. HE SUENTINE WITHO WORD SHOWN OPIED INTLE COF JUSYMARIN ON TO MOREND ALE I SHE DOO SEDLED EXPLIA CAPPOES M\n",
       "\n",
       "\n"
      ]
@@ -506,7 +571,7 @@
    ],
    "source": [
     "# Pass the initial text, the n_gram model, and the amount of characters to generate\n",
-    "generated_text = generate_new_text(\"THIS IS THE\", n_gram_model, 1000)"
+    "generated_text = generate_new_text(\"TH\", n_gram_model, 10000)"
    ]
   },
   {
@@ -528,7 +593,7 @@
      "output_type": "stream",
      "text": [
       "Evaluating model...\n",
-      "Percentage Of Valid Words: 86.32%\n",
+      "Percentage Of Valid Words: 37.73%\n",
       "\n"
      ]
     }
